<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FigLeaf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="setRootPW">设置管理员密码</string>
    <string name="addNewUser">添加新用户</string>
    <string name="mylock">锁屏</string>
    <string name="list">已经添加的用户：</string>
    <string name="checkbox">Set LockScreen ON.</string>
    
    <string name="oldPW">请输入原密码：</string>
    <string name="hintPW">初始密码：123456</string>
    <string name="newPW">请输入新密码：</string>
    <string name="newPW2">请再次输入新密码：</string>
    
    <string name="userName">用户名称：</string>
    <string name="userPW">请输入密码：</string>
    <string name="userPW2">请再次输入密码：</string>
    <string name="yes">确定</string>
    <string name="no">返回</string>
    <string name="selectHide">选择隐藏项</string>
    
    <string name="enpwd">请输入密码：</string>
    <string name="hint_text">Password</string>
    
</resources>