<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
        />
        <EditText android:id="@+id/userName"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
        /> 
    </TableRow>
    
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userPW"
        />
        <EditText android:id="@+id/userPW"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:password="true"
        /> 
    </TableRow>
    
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userPW2"
        />
        <EditText android:id="@+id/userPW2"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:password="true"
        /> 
    </TableRow>
    
    <Button android:id="@+id/selectHide"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
       android:text="@string/selectHide"/>
    
   
   <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/addYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
        />
        <Button android:id="@+id/addNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
        />
   </TableRow>
    

</LinearLayout>
