<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/bg_et"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout

            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal|top">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:text="@string/enpwd"
                android:id="@+id/textView" android:editable="false"
                android:password="false" android:textSize="16dp"/>


        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pwd" android:layout_gravity="center"
                android:hint="@string/hint_text"
                android:width="360dp" android:autoText="true" android:editable="true"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/comfirm" android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>
